fixed spacing and form works

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -979,6 +979,9 @@ body {
     #footer{
         margin-top: 100px;
     }
+    #footer2{
+        margin-top: 200px;
+    }
 }
 
 @media (max-width: 1000px){
